Implementing the method for generating neighborhoods

--- a/tests.ipynb
+++ b/tests.ipynb
@@ -139,6 +139,48 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_neighborhood(cell, distance):\n",
+    "    neighborhood = []\n",
+    "    x_min = max(0, cell[0] - distance)\n",
+    "    x_max = min(40, cell[0] + distance)\n",
+    "    y_min = max(0, cell[1] - distance)\n",
+    "    y_max = min(40, cell[1] + distance)\n",
+    "    \n",
+    "    for i in range(x_min, x_max):\n",
+    "        for j in range(y_min, y_max):\n",
+    "            neighborhood.append((i,j))\n",
+    "\n",
+    "    return neighborhood"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(19, 19)]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test = generate_neighborhood((20,20), 1)\n",
+    "\n",
+    "test"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
