--- a/tests.ipynb
+++ b/tests.ipynb
@@ -91,13 +91,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [
@@ -119,27 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4.0"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "40/10"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,9 +123,11 @@
     "    y_min = max(0, cell[1] - distance)\n",
     "    y_max = min(40, cell[1] + distance)\n",
     "    \n",
-    "    for i in range(x_min, x_max):\n",
-    "        for j in range(y_min, y_max):\n",
+    "    for i in range(x_min, x_max + 1):\n",
+    "        for j in range(y_min, y_max + 1):\n",
     "            neighborhood.append((i,j))\n",
+    "    \n",
+    "    neighborhood.remove(cell)\n",
     "\n",
     "    return neighborhood"
    ]
@@ -181,15 +156,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def active_cells(alive):\n",
+    "    active_cells = []\n",
+    "    for x in alive:\n",
+    "        for y in generate_neighborhood(x,1):\n",
+    "            if y not in active_cells:\n",
+    "                active_cells.append(y)\n",
+    "\n",
+    "    active_cells = list(set(active_cells) | set(alive))\n",
+    "    \n",
+    "    return active_cells"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0, 1), (1, 0), (1, 1)]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "generate_neighborhood((0,0),1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0, 0), (0, 1), (0, 2), (1, 0), (1, 1), (1, 2)]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# alive =  [(20,20), (21,20), (21,21), (22,20)]\n",
+    "alive = [(0,0), (0,1)]\n",
+    "\n",
+    "active = active_cells(alive)\n",
+    "\n",
+    "active.sort()\n",
+    "active"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{(0, 0), (0, 3), (0, 4)}"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set([(0,0), (0,4)]) | set([(0,0), (0,4), (0,3)])\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.6 64-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -203,12 +255,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+    "hash": "eab14602231ad01e6975e6b14c107e0ddf402763b11716d601df613e1787ed6a"
    }
   }
  },
