--- a/tests.ipynb
+++ b/tests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pygame 2.1.2 (SDL 2.0.18, Python 3.9.6)\n",
+      "pygame 2.1.2 (SDL 2.0.18, Python 3.10.8)\n",
       "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
      ]
     },
@@ -28,23 +28,15 @@
      "output_type": "error",
      "traceback": [
       "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[0;31mSystemExit\u001b[0m\n"
+      "\u001b[1;31mSystemExit\u001b[0m\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/gabrielrodrigues/Library/Python/3.9/lib/python/site-packages/IPython/core/interactiveshell.py:3441: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "C:\\Users\\gbr_x\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\IPython\\core\\interactiveshell.py:3441: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
       "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "The Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
@@ -52,6 +44,46 @@
     "from GameOfLife import Game\n",
     "\n",
     "game = Game()\n",
+    "\n",
+    "game.draw_screen()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pygame 2.1.2 (SDL 2.0.18, Python 3.10.8)\n",
+      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
+     ]
+    },
+    {
+     "ename": "SystemExit",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[1;31mSystemExit\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\gbr_x\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\IPython\\core\\interactiveshell.py:3441: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from GameOfLife import Game\n",
+    "\n",
+    "game = Game()\n",
+    "\n",
     "\n",
     "game.draw_screen()"
    ]
@@ -66,27 +98,27 @@
     "cell_2 = (0,4)\n",
     "\n",
     "def distance(cell_1, cell_2):\n",
-    "    return np.min(np.absolute(np.array(cell_1) - np.array(cell_2)))\n"
+    "    return np.max(np.absolute(np.array(cell_1) - np.array(cell_2)))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1, 1])"
+       "11"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.array((2,2)) - np.array((1,1))"
+    "distance((9,9), (8,20))"
    ]
   },
   {
@@ -220,22 +252,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_1 = [(0,0), (0,4), (0,4)] \n",
+    "list_2 = [(0,0), (0,4), (0,3)]\n",
+    "\n",
+    "for x in set(list_2) - set(list_1):\n",
+    "    print(x)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{(0, 0), (0, 3), (0, 4)}"
+       "[(0, 0), (0, 4), (0, 0), (0, 4), (0, 3)]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "set([(0,0), (0,4)]) | set([(0,0), (0,4), (0,3)])\n"
+    "list_1 + list_2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lista = []\n",
+    "for x in range(21):\n",
+    "    lista.append(x)\n",
+    "lista"
    ]
   }
  ],
